<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/purple_200"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_num"
        android:textSize="30sp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/secondEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_num"
        android:textSize="30sp"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/calculate" />


</LinearLayout>